--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,8 +6,8 @@ dataSources:
     name: ControllerListener
     network: mainnet
     source:
-      address: "0x222412af183BCeAdEFd72e4Cb1b71f1889953b1C"
-      startBlock: 10770087
+      address: "0x222412af183BCeAdEFd72e4Cb1b71f1889953b1C" # created at block 10770087
+      startBlock: 12135513 #most recent created 12135514 https://etherscan.io/address/0x0ca19915439c12b16c0a8c119ec05fa801365a15#code
       abi: Controller
     mapping:
       kind: ethereum/events
@@ -36,7 +36,7 @@ dataSources:
           #   - setFeeRewardForwarder(address)
           #   - setHardRewards(address)
           #   - setStorage(address)
-      file: ./src/VaultListener.ts
+      file: ./src/ControllerListener.ts
 
 templates:
   - kind: ethereum/contract
