--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -7,17 +7,23 @@ dataSources:
     network: mainnet
     source:
       address: "0x222412af183BCeAdEFd72e4Cb1b71f1889953b1C" # created at block 10770087
-      startBlock: 10770087 #most recent created 12135514 https://etherscan.io/address/0x0ca19915439c12b16c0a8c119ec05fa801365a15#code
-      abi: Controller
+      startBlock: 12135513 #most recent created 12135514 https://etherscan.io/address/0x0ca19915439c12b16c0a8c119ec05fa801365a15#code
+      abi: ControllerContract
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - Vault
+        - Strategy
+        - Token
       abis:
-        - name: Controller
+        - name: ControllerContract
           file: ./abis/contracts_manual/Controller.json
+        - name: ERC20DetailedContract
+          file: ./abis/@openzeppelin/contracts/token/ERC20/ERC20Detailed.sol/ERC20Detailed.json
+        - name: VaultContract
+          file: ./abis/contracts/base/Vault.sol/Vault.json
       callHandlers:
         - function: addVaultAndStrategy(address,address)
           handler: handleAddVaultAndStrategy
@@ -43,7 +49,7 @@ templates:
     name: VaultListener
     network: mainnet
     source:
-      abi: Vault
+      abi: VaultContract
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -55,7 +61,7 @@ templates:
         - Withdrawal
         - Token
       abis:
-        - name: Vault
+        - name: VaultContract
           file: ./abis/contracts/base/Vault.sol/Vault.json
       eventHandlers:
         # - event: Approval(indexed address,indexed address,uint256)
