Added DoHardWork entity and created mapping in ControllerListener, started with tutorial

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -24,6 +24,9 @@ dataSources:
           file: ./abis/@openzeppelin/contracts/token/ERC20/ERC20Detailed.sol/ERC20Detailed.json
         - name: VaultContract
           file: ./abis/contracts/base/Vault.sol/Vault.json
+      eventHandlers:
+        - event: SharePriceChangeLog(indexed address,indexed address,uint256,uint256,uint256)
+          handler: handleSharePriceChangeLog
       callHandlers:
         - function: addVaultAndStrategy(address,address)
           handler: handleAddVaultAndStrategy
