--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -82,3 +82,28 @@ templates:
         - event: Withdraw(indexed address,uint256)
           handler: handleWithdraw
       file: ./src/VaultListener.ts
+
+  - kind: ethereum/contract
+    name: StrategyListener
+    network: mainnet
+    source:
+      abi: StrategyContract
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Vault
+        - Strategy
+      abis:
+        - name: StrategyContract
+          file: ./abis/contracts_manual/Strategy.json
+      eventHandlers:
+        - event: ProfitAndBuybackLog(uint256,uint256,uint256)
+          handler: handleProfitAndBuybackLog
+      # - Liquidating(address,uint256)
+      # - ProfitAndBuybackLog(uint256,uint256,uint256)
+      # - ProfitLogInReward(uint256,uint256,uint256)
+      # - ProfitsNotCollected(address)
+
+      file: ./src/StrategyListener.ts
