--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -2,35 +2,59 @@ specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
+  # - kind: ethereum/contract
+  #   name: ControllerListener
+  #   network: mainnet
+  #   source:
+  #     address: "0x222412af183BCeAdEFd72e4Cb1b71f1889953b1C"
+  #     startBlock: 10770087
+  #     abi: ControllerContract
+  #   mapping:
+  #     kind: ethereum/events
+  #     apiVersion: 0.0.4
+  #     language: wasm/assemblyscript
+  #     entities:
+  #       - Vault
+  #       - Strategy
+  #       - Token
+  #     abis:
+  #       - name: ControllerContract
+  #         file: ./abis/contracts_manual/Controller.json
+  #       - name: ERC20DetailedContract
+  #         file: ./abis/@openzeppelin/contracts/token/ERC20/ERC20Detailed.sol/ERC20Detailed.json
+  #       - name: VaultContract
+  #         file: ./abis/contracts/base/Vault.sol/Vault.json
+  #     eventHandlers:
+  #       - event: SharePriceChangeLog(indexed address,indexed address,uint256,uint256,uint256)
+  #         handler: handleSharePriceChangeLog
+  #     callHandlers:
+  #       - function: addVaultAndStrategy(address,address)
+  #         handler: handleAddVaultAndStrategy
+  #     file: ./src/ControllerListener.ts
+
   - kind: ethereum/contract
-    name: ControllerListener
+    name: NotifyHelperListener
     network: mainnet
     source:
-      address: "0x222412af183BCeAdEFd72e4Cb1b71f1889953b1C"
-      startBlock: 10770087
-      abi: ControllerContract
+      address: "0xE20c31e3d08027F5AfACe84A3A46B7b3B165053c"
+      startBlock: 11276997 
+      abi: NotifyHelperContract
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
-        - Vault
-        - Strategy
-        - Token
+        - Pool
       abis:
-        - name: ControllerContract
-          file: ./abis/contracts_manual/Controller.json
-        - name: ERC20DetailedContract
-          file: ./abis/@openzeppelin/contracts/token/ERC20/ERC20Detailed.sol/ERC20Detailed.json
-        - name: VaultContract
-          file: ./abis/contracts/base/Vault.sol/Vault.json
-      eventHandlers:
-        - event: SharePriceChangeLog(indexed address,indexed address,uint256,uint256,uint256)
-          handler: handleSharePriceChangeLog
+        - name: NotifyHelperContract
+          file: ./abis/contracts_manual/NotifyHelper.json
+      # eventHandlers:
+        # - event: SharePriceChangeLog(indexed address,indexed address,uint256,uint256,uint256)
+        #   handler: handleSharePriceChangeLog
       callHandlers:
-        - function: addVaultAndStrategy(address,address)
-          handler: handleAddVaultAndStrategy
-      file: ./src/ControllerListener.ts
+        - function: notifyPools(uint256[],address[],uint256)
+          handler: handleNotifyPools
+      file: ./src/NotifyHelperListener.ts
 
 templates:
   - kind: ethereum/contract
