--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -56,6 +56,8 @@ dataSources:
       callHandlers:
         - function: notifyPools(uint256[],address[],uint256)
           handler: handleNotifyPools
+        - function: notifyPoolsIncludingProfitShare(uint256[],address[],uint256,uint256,uint256)
+          handler: handleNotifyPoolsIncludingProfitShare
       file: ./src/NotifyHelperListener.ts
 
 templates:
