--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -33,12 +33,12 @@ dataSources:
       file: ./src/ControllerListener.ts
 
   - kind: ethereum/contract
-    name: NotifyHelperListener
+    name: NoMintNotifyHelperListener
     network: mainnet
     source:
       address: "0xE20c31e3d08027F5AfACe84A3A46B7b3B165053c"
       startBlock: 11276997
-      abi: NotifyHelperContract
+      abi: NoMintNotifyHelperContract
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -47,9 +47,9 @@ dataSources:
         - Pool
         - Vault
       abis:
-        - name: NotifyHelperContract
+        - name: NoMintNotifyHelperContract
           file: ./abis/contracts_manual/NotifyHelper.json
-        - name: PoolContract
+        - name: NoMintPoolContract
           file: ./abis/contracts/base/NoMintRewardPool.sol/NoMintRewardPool.json
         - name: ERC20DetailedContract
           file: ./abis/@openzeppelin/contracts/token/ERC20/ERC20Detailed.sol/ERC20Detailed.json
@@ -58,7 +58,33 @@ dataSources:
           handler: handleNotifyPools
         - function: notifyPoolsIncludingProfitShare(uint256[],address[],uint256,uint256,uint256)
           handler: handleNotifyPoolsIncludingProfitShare
-      file: ./src/NotifyHelperListener.ts
+      file: ./src/NoMintNotifyHelperListener.ts
+
+  - kind: ethereum/contract
+    name: PotNotifyHelperListener
+    network: mainnet
+    source:
+      address: "0x657F0A6b628caB0d119398fE725C3C5792E4Dd0F"
+      startBlock: 12049016
+      abi: PotNotifyHelperContract
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - PotPool
+        - Vault
+      abis:
+        - name: PotNotifyHelperContract
+          file: ./abis/contracts_manual/NotifyHelper.json
+        - name: PotPoolContract
+          file: ./abis/contracts/base/PotPool.sol/PotPool.json
+        - name: ERC20DetailedContract
+          file: ./abis/@openzeppelin/contracts/token/ERC20/ERC20Detailed.sol/ERC20Detailed.json
+      callHandlers:
+        - function: notifyPools(uint256[],address[],uint256)
+          handler: handlePotNotifyPools
+      file: ./src/PotNotifyHelperListener.ts
 
 templates:
   - kind: ethereum/contract
@@ -134,5 +160,24 @@ templates:
           file: ./abis/contracts/base/NoMintRewardPool.sol/NoMintRewardPool.json
       eventHandlers:
         - event: RewardAdded(uint256)
+          handler: handleRewardAdded
+      file: ./src/NoMintPoolListener.ts
+
+  - kind: ethereum/contract
+    name: PotPoolListener
+    network: mainnet
+    source:
+      abi: PotPoolContract
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - PotPool
+      abis:
+        - name: PotPoolContract
+          file: ./abis/contracts/base/PotPool.sol/PotPool.json
+      eventHandlers:
+        - event: RewardAdded(address,uint256)
           handler: handleRewardAdded
       file: ./src/NoMintPoolListener.ts
