--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -15,6 +15,7 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - Vault
+        - NewUniVault
         - Strategy
         - Token
       abis:
