--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "graph build",
     "create-local": "graph create --node http://localhost:8020/ harvestfi/harvest-finance",
     "remove-local": "graph remove --node http://localhost:8020/ harvestfi/harvest-finance",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 harvestfi/harvest-finance"
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 harvestfi/harvest-finance",
+    "deploy-prod": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ harvestfi/harvest-finance"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.20.0",
