--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
   "dependencies": {
     "@graphprotocol/graph-cli": "0.20.0",
     "@graphprotocol/graph-ts": "0.20.0"
+  },
+  "devDependencies": {
+    "axios": "^0.21.1",
+    "mocha": "^9.0.1"
+  },
+  "mocha": {
+    "timeout": 999999
   }
 }
