--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "axios": "^0.21.1",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.4.0",
     "mocha": "^9.0.1"
   },
   "mocha": {
