--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
+    "deploy-dev": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ viacheslavvbogdanov/Harvest",
     "create-local": "graph create --node http://localhost:8020/ harvestfi/harvest-finance",
     "remove-local": "graph remove --node http://localhost:8020/ harvestfi/harvest-finance",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 harvestfi/harvest-finance",
     "deploy-prod": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ harvestfi/harvest-finance"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.20.0",
+    "@graphprotocol/graph-cli": "^0.21.1",
     "@graphprotocol/graph-ts": "0.20.0"
   }
 }
